# ros_faces

./: CMakeLists.txt  README.md  package.xml
launch/: pivideo.launch
scripts/: face_detector_node.py  pivideo_node.py
