<?xml version="1.0"?>
<package>
  <name>ros_faces</name>
  <version>0.0.0</version>
  <description>ROS Nodes for Face Detection and Recognition</description>

  <maintainer email="Christopher.Sacca@tufts.edu">Christopher Sacca</maintainer>

  <license>BSD</license>

  <author email="Christopher.Sacca@tufts.edu">Christopher Sacca</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
